# sample-fastapi-nextjs-prisma

./: .gitignore  README.md  compose.yml  start.sh
backend/: Dockerfile  package-lock.json  pyproject.toml
backend/app/: database.py  server.py
backend/app/api/: route.py
backend/prisma/: schema.prisma
frontend/: Dockerfile  package-lock.json
postgres/: ddl.sql
