[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
sse-starlette = "^2.2.1"
prisma = "^0.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
line_length = 120
profile = "black"
